--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,18 @@
   </properties>
 
   <dependencies>
-    <dependency>
+  <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+     <dependency>
+	    <groupId>org.mockito</groupId>
+    	<artifactId>mockito-core</artifactId>
+    	<version>4.6.1</version>
+    	<scope>test</scope>
+	</dependency>
   </dependencies>
 
   <build>
